--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <video autoplay loop muted plays-inline src="video/1.mp4" class="background-video"></video>
+    <div class="overlay">
+        
+    </div>
     <audio src="" id="audio"></audio>
 
 
